[KARAF-5396] Fix instance starting on java 9
Former-commit-id: c77fe2caeec94e151922f196d2e21febe0c1e5b8